--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hola Mundo</title>
     <script defer src="main.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="app"></div>
